[package]
name = "pest_string_derive"
version = "0.1.0"
edition = "2018"
authors = ["Gjn"]
license = "MIT"
description = "String parser derive"
homepage = "https://example.com"
repository = "https://github.com/pest"
readme = "README.md"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pest_string = { path = "../pest_string" }
syn = "1.0"
quote = "1.0"
